Updated data format.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="col-12 col-md-6 col-xl-4">
                     <select class="form-select form-select-lg" id="school" disabled>
                         <option value="-2" disabled selected>School</option>
-                        <option value="-1" disabled>&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;</option>
+                        <option value="-1" disabled>&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;</option>
                     </select>
                 </div>
 
