--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row g-3 g-md-4 g-xl-5 align-items-center">
 
                 <!-- School Selection -->
-                <div class="col-12 col-md-6 col-xl-4">
+                <div class="col-12 col-l-6 col-xl-4">
                     <select class="form-select form-select-lg" id="school" disabled>
                         <option value="-2" disabled selected>School</option>
                         <option value="-1" disabled>&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;</option>
@@ -32,18 +32,20 @@
                 </div>
 
                 <!-- Roulette Activation -->
-                <div class="col-12 col-md-6 col-xl-8 d-grid">
+                <div class="col-12 col-l-6 col-xl-8 d-grid">
                     <button class="btn btn-primary btn-lg" type="button" id="go" disabled>Go!</button>
                 </div>
 
                 <!-- Building Code -->
-                <div class="col-12 col-md-6 col-xl-4 info-1 d-none">
+                <div class="col-12 col-l-6 col-xl-4 info-1 d-none">
                     <h1 class="display-1 border border-primary rounded p-3 p-md-4 p-xl-5" id="code"></h1>
                 </div>
 
                 <!-- Building Name -->
-                <div class="col-12 col-md-6 col-xl-8 info-2 d-none">
-                    <h1 class="display-3" id="name"></h1>
+                <div class="col-12 col-l-6 col-xl-8 info-2 d-none">
+                    <a href="#" id="link" target="_blank">
+                        <h1 class="display-3" id="name"></h1>
+                    </a>
                 </div>
 
                 <!-- Building Tips -->
