--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <!-- External Stylesheets -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Local Stylesheets -->
+        <link href="css/custom.css" rel="stylesheet">
+
     </head>
 
     <!-- Document Contents -->
@@ -21,10 +24,10 @@
 
         <!-- Main Container -->
         <div class="container text-center py-3 py-md-4 py-xl-5">
-            <div class="row g-3 g-md-4 g-xl-5 align-items-center">
+            <div class="row g-3 g-lg-4 g-xl-5 align-items-center">
 
                 <!-- School Selection -->
-                <div class="col-12 col-l-6 col-xl-4">
+                <div class="col-12 col-lg-6 col-xl-4">
                     <select class="form-select form-select-lg" id="school" disabled>
                         <option value="-2" disabled selected>School</option>
                         <option value="-1" disabled>&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;&boxh;</option>
@@ -32,17 +35,17 @@
                 </div>
 
                 <!-- Roulette Activation -->
-                <div class="col-12 col-l-6 col-xl-8 d-grid">
+                <div class="col-12 col-lg-6 col-xl-8 d-grid">
                     <button class="btn btn-primary btn-lg" type="button" id="go" disabled>Go!</button>
                 </div>
 
                 <!-- Building Code -->
-                <div class="col-12 col-l-6 col-xl-4 info-1 d-none">
-                    <h1 class="display-1 border border-primary rounded p-3 p-md-4 p-xl-5" id="code"></h1>
+                <div class="col-12 col-lg-6 col-xl-4 info-1 d-none">
+                    <h1 class="display-1 border border-primary rounded p-3 p-md-4 p-xl-5 shadow" id="code"></h1>
                 </div>
 
                 <!-- Building Name -->
-                <div class="col-12 col-l-6 col-xl-8 info-2 d-none">
+                <div class="col-12 col-lg-6 col-xl-8 info-2 d-none">
                     <a href="#" id="link" target="_blank">
                         <h1 class="display-3" id="name"></h1>
                     </a>
@@ -51,6 +54,16 @@
                 <!-- Building Tips -->
                 <div class="col-12 info-2 d-none">
                     <p class="lead" id="tips"></p>
+                </div>
+
+                <!-- Map -->
+                <div class="col-12 info-2 d-none">
+                    <div id="map">
+                        <img id="map-img" class="img-fluid border border-primary rounded shadow">
+                        <div id="map-rail-h" class="border-top border-bottom border-3 border-primary rounded shadow-sm"></div>
+                        <div id="map-rail-v" class="border-start border-end border-3 border-primary rounded shadow-sm"></div>
+                        <div id="map-box" class="border border-5 border-danger rounded shadow"></div>
+                    </div>
                 </div>
 
             </div>
