Finished map feature.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <!-- Map -->
-                <div class="col-12 info-2 d-none">
+                <div class="col-12 col-lg-10 col-xl-8 offset-lg-1 offset-xl-2 info-2 d-none">
                     <div id="map">
                         <img id="map-img" class="img-fluid border border-primary rounded shadow">
                         <div id="map-rail-h" class="border-top border-bottom border-3 border-primary rounded shadow-sm"></div>
